--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@ images/hotel-service-1.jpg
 images/hotel-service-2.jpg
 images/hotel-service-3.jpg
 images/hotel-service-4.jpg
+.vs/wordpressguy/config/applicationhost.config
+.vs/ProjectSettings.json
