--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ images/hotel-service-3.jpg
 images/hotel-service-4.jpg
 .vs/wordpressguy/config/applicationhost.config
 .vs/ProjectSettings.json
+.idea/workspace.xml
+.idea/wordpressguy.iml
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/encodings.xml
